Refactor HTML structure and add new packages
Replaced multiple <div> elements with semantic <header>, <section>, and <footer> tags across several HTML files for improved accessibility and structure. Added Trivium Gold and Platino package sections to pruebas.html. Updated servicios/producciones/eventos/index.html to include new DJ and Conference package sections with revised content and layout. Added VS Code live server port setting.

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -104,7 +104,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid p-0">
+    <header class="container-fluid p-0">
         <div class="header-section position-relative d-flex align-items-center justify-content-center parallax-header"
             style="
                 height: 340px; 
@@ -117,7 +117,7 @@
                 Contactanos
             </h1>
         </div>
-    </div>
+    </header>
     <script>
         // Parallax effect for .parallax-header
         window.addEventListener('scroll', function () {
@@ -135,7 +135,7 @@
 
 
     <!-- Contact Start -->
-    <div class="container-fluid pt-5">
+    <section class="container-fluid pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <!-- <h5 class="text-primary mb-3">Contact Us</h5> -->
             <h2 class="text-white mb-3 display-4">Cuéntanos tu idea</h2>
@@ -178,7 +178,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Modal de éxito -->
     <div id="modal-exito" class="modal">
@@ -202,13 +202,11 @@
             </div>
         </div>
     </div>
-
-
     <!-- Contact End -->
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
+    <footer class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
         <div class="text-center mb-1">
             <img src="../img/logo_s.webp" alt="Trivium Records Logo" style="max-width: 100px; height: auto;">
         </div>
@@ -296,7 +294,7 @@
                 </ul>
             </div> -->
         </div>
-    </div>
+    </footer>
     <!-- Footer End -->
 
 
