--- a/pruebas.html
+++ b/pruebas.html
@@ -226,3 +226,279 @@
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
+<!-- Paquetes Gold y platinum -->
+<!-- Trivium Gold Start -->
+<div class="container-fluid my-5 py-5">
+    <div class="d-flex flex-column text-center mb-5">
+        <h2 class="text-white mb-3 display-4">Trivium <span style="color: #f2af13;">Gold</span></h2>
+        <p class="text-white" style="font-size: .9rem;">"iaticos no incluidos para zonas fuera de
+            Leon, GTO, precio puede variar"</p>
+    </div>
+    <div class="row mb-4 trivium-pack-gold justify-content-center align-items-center">
+        <div class="col-lg-5 col-md-12 text-center mb-4 mb-lg-0">
+            <img src="../../../img/acade_canto_basi.webp" alt="" style="max-width:100%;height:auto;">
+        </div>
+        <div class="col-lg-7 col-md-12">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div>
+                        <div class="d-flex mb-2">
+                            <h4 class="text-white text-truncate m-3">TRIVIUM STAFF</h4>
+                        </div>
+                        <ul>
+                            <li>DJ Open Format Hasta 5 horas</li>
+                            <li>Performance Vocal (Versatil/Opera)</li>
+                            <li>LightJockey (Ing. Iluminacion)</li>
+                            <li>Visual Man (Ing. Visuales)</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <div class="d-flex mb-2">
+                            <h4 class="card-title text-white text-truncate m-3">MONTAJE</h4>
+                        </div>
+                        <ul>
+                            <li>Diseño de montaje para el evento</li>
+                            <li>Cabina 2.4 mts a eleccion (elevada)</li>
+                            <li>Frente de Cabina tipo Barra 4.8</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <div class="d-flex mb-2">
+                            <h4 class="card-title text-white text-truncate m-3">AUDIO</h4>
+                        </div>
+                        <ul>
+                            <li>Sistema Lineal 3 vias 1,200w Marca Thor</li>
+                            <li>Consola Digital 8 Canales</li>
+                            <li>Microfonos Inalambricos SHURE</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div>
+                        <div class="d-flex mb-2">
+                            <h4 class="card-title text-white text-truncate m-3">ILUMINACION</h4>
+                        </div>
+                        <ul>
+                            <li>8 Cabezas Moviles BEAM</li>
+                            <li>12 Luces Arquitectonicos RCBWA</li>
+                            <li>2 Blinders (Estrobos)</li>
+                            <li>2 Lanzallamas o Jet C02</li>
+                            <li>Maquina de Humo tipo Haze</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <div class="d-flex mb-2">
+                            <h4 class="card-title text-white text-truncate m-3">PANTALLA LED</h4>
+                        </div>
+                        <ul>
+                            <li>Diseño de Montaje de Pantalla</li>
+                            <li>Diseño de Visuales</li>
+                            <li>6 mts 2 Pantalla LED</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <div class="d-flex mb-2">
+                            <h4 class="card-title text-white text-truncate m-3">EFECTOS ESPECIALES</h4>
+                        </div>
+                        <ul>
+                            <li>1 Bazooka Papel Figuras</li>
+                            <li>8 Chisperos frios</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-3 w-100 d-flex flex-column align-items-center justify-content-center text-center">
+                <div class="d-flex justify-content-center">
+                    <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Trivium%20Gold"
+                        class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                        rel="noopener">
+                        <i class="fab fa-whatsapp fa-lg m-2"></i>
+                        WhatsApp
+                    </a>
+                </div>
+                <h2 class="text-light text-center">Total: $40,000</h2>
+            </div>
+        </div>
+    </div>
+    <style>
+        .trivium-pack-gold {
+            padding: 30px 10px;
+        }
+
+        .trivium-pack-gold img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 1rem;
+        }
+
+        @media (max-width: 991.98px) {
+            .trivium-pack-gold {
+                flex-direction: column !important;
+                text-align: start;
+                padding: 20px 5px;
+                justify-content: center;
+            }
+
+            .trivium-pack-gold .col-lg-5,
+            .trivium-pack-gold .col-lg-7 {
+                max-width: 100%;
+                flex: 0 0 100%;
+                margin-bottom: 20px;
+            }
+        }
+
+        @media (max-width: 767.98px) {
+            .trivium-pack-gold {
+                padding: 10px 20px;
+                text-align: center;
+                justify-content: center;
+            }
+
+            .trivium-pack-gold ul {
+                padding-left: 1.5em;
+                text-align: left;
+                display: inline-block;
+            }
+
+            .trivium-pack-gold h4 {
+                font-size: 1.5rem;
+                text-align: center !important;
+            }
+
+            .trivium-pack-gold .d-flex {
+                justify-content: center;
+            }
+        }
+    </style>
+    <!-- Trivium Gold End -->
+
+
+
+    <!-- Trivium Platino Start -->
+    <div class="container-fluid my-5 py-5">
+        <div class="d-flex flex-column text-center mb-5">
+            <h2 class="text-white mb-3 display-4">Trivium <span style="color: #f2af13;">Platino</span></h2>
+            <h3 class="text-white mb-3">Todo en Uno</h3>
+            <p class="text-white" style="font-size: .9rem;">"iaticos no incluidos para zonas fuera de
+                Leon, GTO, precio puede variar"</p>
+        </div>
+        <div class="row mb-4 trivium-pack-platino justify-content-center align-items-center">
+            <div class="col-lg-5 col-md-12 text-center mb-4 mb-lg-0">
+                <img src="../../../img/acade_canto_basi.webp" alt="" style="max-width:100%;height:auto;">
+            </div>
+            <div class="col-lg-7 col-md-12">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div>
+                            <div class="d-flex mb-2">
+                                <h4 class="card-title text-white text-truncate m-3">TRIVIUM PRODUCCION</h4>
+                            </div>
+                            <ul>
+                                <li>DJ Performatico</li>
+                                <li>Cantante Versatil</li>
+                                <li>Equipo Tecnico</li>
+                                <li>Equipo de Audio-lluminacion de "TRIVIUM GOLD"</li>
+                                <li>Montaje/Desmontaje</li>
+                                <li>Efectos Especiales</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <div class="d-flex mb-2">
+                                <h4 class="card-title text-white text-truncate m-3">TRIVIUM SANCTUS (OCTETО)</h4>
+                            </div>
+                            <ul>
+                                <li>Soprano</li>
+                                <li>Tenor</li>
+                                <li>Cuarteto de cuerdas</li>
+                                <li>1 Trompetista</li>
+                                <li>1 Pianista</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div>
+                            <div class="d-flex mb-2">
+                                <h4 class="text-white text-truncate m-3">TRIVIUM COCKTAIL (BANDA VERSATIL)</h4>
+                            </div>
+                            <ul>
+                                <li>2 Cantantes</li>
+                                <li>1 Guitarrista</li>
+                                <li>1 Bajista</li>
+                                <li>1 Pianista</li>
+                                <li>1 Baterista</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3 w-100 d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="d-flex justify-content-center">
+                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Trivium%20Platino"
+                            class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                            rel="noopener">
+                            <i class="fab fa-whatsapp fa-lg m-2"></i>
+                            WhatsApp
+                        </a>
+                    </div>
+                    <h2 class="text-light text-center">Total: $60,000</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <style>
+        .trivium-pack-platino {
+            padding: 30px 10px;
+        }
+
+        .trivium-pack-platino img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 1rem;
+        }
+
+        @media (max-width: 991.98px) {
+            .trivium-pack-platino {
+                flex-direction: column !important;
+                text-align: start;
+                padding: 20px 5px;
+                justify-content: center;
+            }
+
+            .trivium-pack-platino .col-lg-5,
+            .trivium-pack-platino .col-lg-7 {
+                max-width: 100%;
+                flex: 0 0 100%;
+                margin-bottom: 20px;
+            }
+        }
+
+        @media (max-width: 767.98px) {
+            .trivium-pack-platino {
+                padding: 10px 20px;
+                text-align: center;
+                justify-content: center;
+            }
+
+            .trivium-pack-platino ul {
+                padding-left: 1.5em;
+                text-align: left;
+                display: inline-block;
+            }
+
+            .trivium-pack-platino h4 {
+                font-size: 1.5rem;
+                text-align: center !important;
+            }
+
+            .trivium-pack-platino .d-flex {
+                justify-content: center;
+            }
+        }
+    </style>
+    <!-- Trivium Platino End -->
