--- a/servicios/producciones/index.html
+++ b/servicios/producciones/index.html
@@ -107,7 +107,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid p-0">
+    <header class="container-fluid p-0">
         <div class="header-section position-relative d-flex align-items-center justify-content-center parallax-header"
             style="
                 height: 340px; 
@@ -120,7 +120,7 @@
                 Trivium Producciones
             </h1>
         </div>
-    </div>
+    </header>
     <script>
         // Parallax effect for .parallax-header
         window.addEventListener('scroll', function () {
@@ -137,8 +137,8 @@
     <!-- Header End -->
 
 
-    <!-- About Start -->
-    <div class="container-fluid mb-5">
+    <!-- Eventos Start -->
+    <section class="container-fluid mb-5">
         <div class="row align-items-center">
             <div class="col-lg-6 px-0">
                 <img width="90%" class="img-fluid" src="../../img/prueba_02.webp" alt="Image">
@@ -157,12 +157,12 @@
                     data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Ver Más</a>
             </div>
         </div>
-    </div>
-    <!-- About End -->
+    </section>
+    <!-- Eventos End -->
 
 
-    <!-- About Start -->
-    <div class="container-fluid mb-5">
+    <!-- Artistas Start -->
+    <section class="container-fluid mb-5">
         <div class="row align-items-center">
             <div class="col-lg-6 py-5 py-lg-0 px-3 px-lg-5 order-2 order-lg-1">
                 <h3 class="text-white mb-3" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
@@ -186,12 +186,12 @@
                 <img width="90%" class="img-fluid" src="../../img/prueba_01.webp" alt="Image">
             </div>
         </div>
-    </div>
-    <!-- About End -->
+    </section>
+    <!-- Artistas End -->
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
+    <footer class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
         <div class="text-center mb-1">
             <img src="../../img/logo_s.webp" alt="Trivium Records Logo" style="max-width: 100px; height: auto;">
         </div>
@@ -261,7 +261,7 @@
                 </p>
             </div>
         </div>
-    </div>
+    </footer>
     <!-- Footer End -->
 
 
