--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid p-0">
+    <header class="container-fluid p-0">
         <div class="header-video-container position-relative vh-100"
             style="height: 100vh; min-height: 400px; max-height: none; overflow: hidden;">
             <video id="headerVideo" class="w-100 h-100 position-absolute"
@@ -131,12 +131,12 @@
             <div class="header-overlay position-absolute w-100 h-100"
                 style="background: rgba(0, 0, 0, 0.781); z-index: 1; top: 0; left: 0;"></div>
         </div>
-    </div>
+    </header>
     <!-- Header End -->
 
 
     <!-- About Start -->
-    <div class="container-fluid mb-5">
+    <section class="container-fluid mb-5">
         <div class="row align-items-center">
             <div class="col-lg-6 px-0">
                 <img width="100%" class="img-fluid" src="img/about.jpeg" alt="Image">
@@ -173,12 +173,12 @@
                 <!-- <a href="" class="btn btn-lg px-4 btn-primary">Learn More</a> -->
             </div>
         </div>
-    </div>
+    </section>
     <!-- About End -->
 
 
     <!-- Services Start -->
-    <div id="servicios" class="container pt-5" style="background: #000000;">
+    <section id="servicios" class="container pt-5" style="background: #000000;">
         <div class="d-flex flex-column text-center mb-5">
             <h3 class="text-white mb-3 display-6" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
                 data-aos-once="true">Nuestros Servicios</h3>
@@ -242,12 +242,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Services End -->
 
 
     <!-- Facts Start -->
-    <div class="container-fluid my-5 py-5 text-center" style="background: #f2af13;">
+    <section class="container-fluid my-5 py-5 text-center" style="background: #f2af13;">
         <div class="row pt-5">
             <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000"
                 data-aos-once="true">
@@ -280,12 +280,12 @@
                 <h3 class="text-dark mb-3">Colaboraciones con artistas nacionales e internacionales</h3>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Facts End -->
 
 
     <!-- Testimonial Start -->
-    <div class="container-fluid my-5 p-0 py-3">
+    <section class="container-fluid my-5 p-0 py-3">
         <div class="container p-0 py-5">
             <div class="d-flex flex-column text-center mb-5" data-aos="fade-up" data-aos-delay="200"
                 data-aos-duration="1000" data-aos-once="true">
@@ -381,12 +381,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Testimonial End -->
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
+    <footer class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
         <div class="text-center mb-1">
             <img src="img/logo_s.webp" alt="Trivium Records Logo" style="max-width: 100px; height: auto;">
         </div>
@@ -475,7 +475,7 @@
                 </ul>
             </div> -->
         </div>
-    </div>
+    </footer>
     <!-- Footer End -->
 
 
