--- a/servicios/academia/index.html
+++ b/servicios/academia/index.html
@@ -113,7 +113,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid p-0">
+    <header class="container-fluid p-0">
         <div class="header-section position-relative d-flex align-items-center justify-content-center parallax-header"
             style="
                 height: 340px; 
@@ -126,7 +126,7 @@
                 Trivium Academia
             </h1>
         </div>
-    </div>
+    </header>
     <script>
         // Parallax effect for .parallax-header
         window.addEventListener('scroll', function () {
@@ -144,7 +144,7 @@
 
 
     <!-- Facts Start -->
-    <div class="container-fluid my-5 py-5 text-center parallax-facts"
+    <section class="container-fluid my-5 py-5 text-center parallax-facts"
         style="background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('../../../img/header-3.webp') center center / cover no-repeat; background-attachment: fixed; border-radius: 2rem;">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Programa de canto</h2>
@@ -157,7 +157,7 @@
                 WhatsApp
             </a>
         </div> -->
-    </div>
+    </section>
     <script>
         // Parallax efecto suave para la sección de facts
         window.addEventListener('scroll', function () {
@@ -175,7 +175,7 @@
 
 
     <!-- Canto basico Start -->
-    <div class="container-xxl mb-5">
+    <section class="container-xxl mb-5">
 
         <!-- Nivel Básico -->
         <div class="row align-items-center mb-5 py-5 px-3">
@@ -264,12 +264,12 @@
             </div>
         </div>
 
-    </div>
+    </section>
     <!-- Canto Avanzado End -->
 
 
     <!-- Horario Start -->
-    <div class="container-fluid mb-5 py-5" style="background: #f2af13;">
+    <section class="container-fluid mb-5 py-5" style="background: #f2af13;">
         <div class="row justify-content-center text-center">
             <div class="col-12">
                 <h3 class="text-dark mb-4">Horarios flexibles</h3>
@@ -310,12 +310,12 @@
                 </a>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Horario End -->
 
 
     <!-- Facts Start -->
-    <div class="container-fluid my-5 py-5 text-center parallax-facts"
+    <section class="container-fluid my-5 py-5 text-center parallax-facts"
         style="background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('../../../img/header-8.webp') center center / cover no-repeat; background-attachment: fixed; border-radius: 2rem;">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4 text-center">Proximamente más programas</h2>
@@ -328,7 +328,7 @@
                 WhatsApp
             </a>
         </div> -->
-    </div>
+    </section>
     <script>
         // Parallax efecto suave para la sección de facts
         window.addEventListener('scroll', function () {
@@ -346,7 +346,7 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
+    <footer class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
         <div class="text-center mb-1">
             <img src="../../img/logo_s.webp" alt="Trivium Records Logo" style="max-width: 100px; height: auto;">
         </div>
@@ -435,7 +435,7 @@
                 </ul>
             </div> -->
         </div>
-    </div>
+    </footer>
     <!-- Footer End -->
 
 
