--- a/servicios/producciones/artistas/index.html
+++ b/servicios/producciones/artistas/index.html
@@ -107,7 +107,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid p-0">
+    <header class="container-fluid p-0">
         <div class="header-section position-relative d-flex align-items-center justify-content-center parallax-header"
             style="
                 height: 340px; 
@@ -120,7 +120,7 @@
                 Artistas
             </h1>
         </div>
-    </div>
+    </header>
     <script>
         // Parallax effect for .parallax-header
         window.addEventListener('scroll', function () {
@@ -138,7 +138,7 @@
 
 
     <!-- Facts Start -->
-    <div class="container-fluid my-5 py-5 text-center parallax-facts"
+    <section class="container-fluid my-5 py-5 text-center parallax-facts"
         style="background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('../../../img/header-3.webp') center center / cover no-repeat; background-attachment: fixed; border-radius: 2rem;">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Personaliza tu Paquete</h2>
@@ -151,7 +151,7 @@
                 WhatsApp
             </a>
         </div>
-    </div>
+    </section>
     <script>
         // Parallax efecto suave para la sección de facts
         window.addEventListener('scroll', function () {
@@ -170,7 +170,7 @@
 
     <!-- Artistas Start-->
     <!-- 1 -->
-    <div class="container pt-5">
+    <section class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Trivium <span style="color: #f2af13;">Sanctus</span></h2>
             <h3 class="text-white mb-3">Música para misa</h3>
@@ -320,11 +320,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
     <!-- 2 -->
-    <div class="container pt-5">
+    <section class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Trivium <span style="color: #f2af13;">Cocktail</span></h2>
             <h3 class="text-white mb-3">Música para cena</h3>
@@ -475,14 +475,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
     <!-- Artista End -->
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
+    <footer class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
         <div class="text-center mb-1">
             <img src="../../../img/logo_s.webp" alt="Trivium Records Logo" style="max-width: 100px; height: auto;">
         </div>
@@ -571,7 +571,7 @@
                 </ul>
             </div> -->
         </div>
-    </div>
+    </footer>
     <!-- Footer End -->
 
 
